fix. bundler파일로 실행될때, window객체에서 plugin이 모듈을 찾을 수 없는 문제

--- a/demo/swipe_circular_stepmover.html
+++ b/demo/swipe_circular_stepmover.html
@@ -1066,7 +1066,8 @@
             'nextButton' : document.querySelector(".swipe-next"),
             'nDuration': 200
           },
-          'userMethod' : {}
+          'userMethod' : {},
+          'obj' : SwipeStepMoverPlugin
         } 
         ]);
 
