--- a/demo/swipe_circular_responsive_width.html
+++ b/demo/swipe_circular_responsive_width.html
@@ -143,7 +143,8 @@
             'nextButton' : document.querySelector(".swipe-next"),
             'nDuration': 200
           },
-          'userMethod' : {}
+          'userMethod' : {},
+          'obj' : SwipeStepMoverPlugin
         } 
         ]);
 
