change. plugin결합방식 변경에 따라 데모에 옵션추가

--- a/demo/swipe.html
+++ b/demo/swipe.html
@@ -777,7 +777,8 @@
             'nDuration': 200,
             'bMouseEventSupport' : true
           },
-          'userMethod' : {}
+          'userMethod' : {},
+          'obj' : SwipeNavigationPlugin
         },
         {
           'name'      : 'SwipeStepMoverPlugin',
@@ -786,7 +787,8 @@
             'nextButton' : document.querySelector(".swipe-next"),
             'nDuration': 200
           },
-          'userMethod' : {}
+          'userMethod' : {},
+          'obj' : SwipeStepMoverPlugin
         }
         ]);
 
