--- a/demo/swipe_circular.html
+++ b/demo/swipe_circular.html
@@ -1077,8 +1077,9 @@
             'nDuration': 200,
             'bMouseEventSupport' : true
           },
-          'userMethod' : {}
-        }
+          'userMethod' : {},
+          'obj' : SwipeNavigationPlugin
+      }
         ]);
 
 
